# mcve

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  ai.json  rust-toolchain.toml
.cargo/: config.toml
cases/001-sqlx-sqlite-conn-mgr-interruptible-txns/: Cargo.toml  README.md
cases/001-sqlx-sqlite-conn-mgr-interruptible-txns/src/: main.rs
cases/002-vidstack-googlecastoptions-type-not-exported/: README.md  index.html  package-lock.json  package.json  run.sh  tsconfig.json  vite.config.ts
cases/002-vidstack-googlecastoptions-type-not-exported/src/: App.vue  main.ts
skills/create-mcve/: SKILL.md
